--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "author": "ribbon-reels",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "libphonenumber-js": "^1.10.24",
+    "mjml": "^4.13.0",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.25.8"
+    "sequelize": "^6.25.8",
+    "twilio": "^4.8.0"
   }
 }
